--- a/src/globals.css
+++ b/src/globals.css
@@ -3,6 +3,7 @@
 @import "react-toastify/dist/ReactToastify.css";
 @tailwind components;
 @tailwind utilities;
+@import "./prosemirror.css";
 
 :root {
   --toastify-text-color-light: rgb(0.113 0.125 0.14);
@@ -10,4 +11,30 @@
 
 * {
   border-color: var(--gray-a6);
+}
+
+@layer base {
+  :root {
+    --novel-highlight-default: #ffffff;
+    --novel-highlight-purple: #f6f3f8;
+    --novel-highlight-red: #fdebeb;
+    --novel-highlight-yellow: #fbf4a2;
+    --novel-highlight-blue: #c1ecf9;
+    --novel-highlight-green: #acf79f;
+    --novel-highlight-orange: #faebdd;
+    --novel-highlight-pink: #faf1f5;
+    --novel-highlight-gray: #f1f1ef;
+  }
+
+  .dark {
+    --novel-highlight-default: #000000;
+    --novel-highlight-purple: #3f2c4b;
+    --novel-highlight-red: #5c1a1a;
+    --novel-highlight-yellow: #5c4b1a;
+    --novel-highlight-blue: #1a3d5c;
+    --novel-highlight-green: #1a5c20;
+    --novel-highlight-orange: #5c3a1a;
+    --novel-highlight-pink: #5c1a3a;
+    --novel-highlight-gray: #3a3a3a;
+  }
 }
