--- a/src/globals.css
+++ b/src/globals.css
@@ -3,7 +3,7 @@
 @import "react-toastify/dist/ReactToastify.css";
 @tailwind components;
 @tailwind utilities;
-/* @import "./prosemirror.css"; */
+@import "./prosemirror.css";
 
 :root {
   --toastify-text-color-light: rgb(0.113 0.125 0.14);
