--- a/src/globals.css
+++ b/src/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss/base";
 @import "@radix-ui/themes/styles.css";
 @import "react-toastify/dist/ReactToastify.css";
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 :root {
   --toastify-text-color-light: rgb(0.113 0.125 0.14);
