--- a/src/globals.css
+++ b/src/globals.css
@@ -11,3 +11,35 @@
 * {
   border-color: var(--gray-a6);
 }
+
+.mt-navbar[data-breakpoint="xs"] .mt-navMenu {
+  @apply hidden xs:flex;
+}
+.mt-navbar[data-breakpoint="sm"] .mt-navMenu {
+  @apply hidden sm:flex;
+}
+.mt-navbar[data-breakpoint="md"] .mt-navMenu {
+  @apply hidden md:flex;
+}
+.mt-navbar[data-breakpoint="lg"] .mt-navMenu {
+  @apply hidden lg:flex;
+}
+.mt-navbar[data-breakpoint="xl"] .mt-navMenu {
+  @apply hidden xl:flex;
+}
+
+.mt-navbar[data-breakpoint="xs"] .mt-mobileNavMenu {
+  @apply xs:hidden;
+}
+.mt-navbar[data-breakpoint="sm"] .mt-mobileNavMenu {
+  @apply sm:hidden;
+}
+.mt-navbar[data-breakpoint="md"] .mt-mobileNavMenu {
+  @apply md:hidden;
+}
+.mt-navbar[data-breakpoint="lg"] .mt-mobileNavMenu {
+  @apply lg:hidden;
+}
+.mt-navbar[data-breakpoint="xl"] .mt-mobileNavMenu {
+  @apply xl:hidden;
+}
