--- a/src/globals.css
+++ b/src/globals.css
@@ -51,6 +51,36 @@
   .navbar[data-breakpoint="xl"] .mt-mobileNavMenu {
     @apply xl:hidden;
   }
+  /**
+  * Dialog styles
+  */
+  .dialog-content {
+    animation: dialogContentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  }
+
+  .dialog-overlay {
+    animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  }
+
+  @keyframes overlayShow {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  @keyframes dialogContentShow {
+    from {
+      opacity: 0;
+      transform: translate(-50%, -48%) scale(0.96);
+    }
+    to {
+      opacity: 1;
+      transform: translate(-50%, -50%) scale(1);
+    }
+  }
 
   /**
   * Card styles
