--- a/src/globals.css
+++ b/src/globals.css
@@ -121,13 +121,36 @@
   }
 
   /**
- * Scrollbar styles
- */
+  * Scrollbar styles
+  */
   .scrollbar-none {
     scrollbar-width: none;
     -ms-overflow-style: none;
   }
   .scrollbar-none::-webkit-scrollbar {
     display: none;
+  }
+  /**
+  * Avatar styles
+  */
+  .avatar {
+    @apply rounded-full w-7 h-7 ml-4 flex items-center justify-center;
+  }
+
+  /**
+  * Dropdown styles
+  */
+  .dropdown-menu-content {
+    @apply shadow-3 rounded-3 overflow-hidden p-3 mt-1 bg-gray-surface;
+  }
+  .dropdown-menu-trigger {
+    @apply outline-none;
+  }
+  .dropdown-menu-item {
+    @apply py-2 px-3 divide-y outline-none cursor-pointer rounded-3 flex items-center gap-2;
+    @apply hover:bg-accent-11 hover:text-gray-contrast;
+  }
+  .dropdown-menu-separator {
+    @apply h-[1px] bg-gray-a6 my-3;
   }
 }
