--- a/src/globals.css
+++ b/src/globals.css
@@ -6,6 +6,8 @@
 
 :root {
   --toastify-text-color-light: rgb(0.113 0.125 0.14);
+  --color-error: rgb(206 44 49);
+  --color-success: rgb(0 128 0);
 }
 
 * {
