--- a/src/globals.css
+++ b/src/globals.css
@@ -57,10 +57,12 @@
   * Dialog styles
   */
   .dialog-content {
+    @apply rounded-4 bg-gray-1 p-4 fixed focus:outline-none top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[90vw] max-w-[600px] shadow-3;
     animation: dialogContentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
   }
 
   .dialog-overlay {
+    @apply bg-gray-a8 fixed top-0 left-0 right-0 bottom-0;
     animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
   }
 
@@ -222,5 +224,35 @@
   }
   .sidebar-menu-item + .sidebar-menu-item {
     @apply mt-1;
+  }
+  /**
+  * Search Input styles
+  */
+  .search-input input {
+    @apply cursor-pointer;
+  }
+  .search-result-input {
+    @apply outline-1 outline outline-gray-a6 focus:outline-2 focus:outline-accent-9 rounded-3 p-2 w-full;
+    @apply mb-2;
+  }
+  .search-result-list > div {
+    @apply divide-y divide-gray-a6;
+  }
+  .search-result-list-item {
+    @apply flex items-center p-2 cursor-pointer gap-3;
+    @apply hover:bg-accent-9 hover:text-gray-contrast;
+  }
+  .search-result-list-item-content {
+    @apply flex flex-col gap-1;
+  }
+  .search-result-list-item-title {
+    @apply font-semibold text-lg;
+  }
+  .search-result-list-item-subtitle {
+    @apply text-gray-11;
+    @apply group-hover:text-gray-contrast;
+  }
+  .search-result-list-item-image {
+    @apply w-[50px] h-[50px] rounded-3;
   }
 }
