--- a/src/globals.css
+++ b/src/globals.css
@@ -20,7 +20,7 @@
   */
   .navbar {
     @apply shadow-3 w-full p-4 flex items-center border-b;
-    height: 4rem;
+    @apply min-h-[4rem];
   }
   .navbar[data-breakpoint="xs"] .mt-navMenu {
     @apply hidden xs:flex;
@@ -231,28 +231,23 @@
   .search-input input {
     @apply cursor-pointer;
   }
+  .search-dialog {
+    @apply w-screen h-screen md:h-[50vh] overflow-hidden;
+  }
   .search-result-input {
     @apply outline-1 outline outline-gray-a6 focus:outline-2 focus:outline-accent-9 rounded-3 p-2 w-full;
     @apply mb-2;
   }
-  .search-result-list[data-state="loaded"] > div {
-    @apply divide-y divide-gray-a6;
+  .search-result-list {
+    @apply overflow-y-auto h-[calc(100vh-72px)];
   }
   .search-result-list-item {
-    @apply flex items-center p-2 cursor-pointer gap-3;
+    @apply flex items-center p-2 cursor-pointer gap-3 rounded-3;
     @apply hover:bg-accent-9 hover:text-gray-contrast;
-  }
-  .search-result-list-skeleton {
-    @apply space-y-2;
   }
   .search-result-list-item-skeleton {
     @apply animate-pulse;
-  }
-  .search-result-list-item-skeleton div {
-    @apply h-6 w-full bg-gray-a6 rounded-3;
-  }
-  .search-result-list-item-content {
-    @apply flex flex-col gap-1;
+    @apply h-6 w-full bg-gray-a6 rounded-3 mb-2;
   }
   .search-result-list-item-title {
     @apply font-semibold text-lg;
@@ -262,6 +257,9 @@
     @apply group-hover:text-gray-contrast;
   }
   .search-result-list-item-image {
-    @apply w-[50px] h-[50px] rounded-3;
+    @apply w-full;
+  }
+  .search-result-list-item-image-container {
+    @apply w-[50px] h-[50px] rounded-3 overflow-hidden flex items-center justify-center border;
   }
 }
