--- a/src/globals.css
+++ b/src/globals.css
@@ -16,6 +16,13 @@
 
 @layer components {
   /**
+  * Global styles
+  */
+  .overlay {
+    @apply fixed inset-0 bg-gray-a8;
+    animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  }
+  /**
   * Navbar styles
   */
   .navbar {
@@ -59,11 +66,6 @@
   .dialog-content {
     @apply rounded-4 bg-gray-1 p-4 fixed focus:outline-none top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[90vw] max-w-[600px] shadow-3;
     animation: dialogContentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
-  }
-
-  .dialog-overlay {
-    @apply bg-gray-a8 fixed top-0 left-0 right-0 bottom-0;
-    animation: overlayShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
   }
 
   @keyframes overlayShow {
@@ -261,5 +263,21 @@
   }
   .search-result-list-item-image-container {
     @apply w-[50px] h-[50px] rounded-3 overflow-hidden flex items-center justify-center border;
+  }
+
+  /**
+  * Drawer styles
+  */
+  .drawer {
+    @apply bg-gray-1 flex flex-col w-drawer fixed outline-none p-4;
+  }
+  .drawer[data-vaul-drawer-direction="right"] {
+    @apply right-0 top-0 h-screen;
+  }
+  .drawer[data-vaul-drawer-direction="left"] {
+    @apply left-0 top-0 h-screen;
+  }
+  .drawer[data-vaul-drawer-direction="bottom"] {
+    @apply bottom-0 left-0 w-screen;
   }
 }
